Bug 400298 - System Activity window doesn't remember it resized parameters
Summary: System Activity window doesn't remember it resized parameters
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: Process Controller - krunner part (other bugs)
Version First Reported In: 5.14.1
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-25 15:15 UTC by qkex
Modified: 2022-03-03 21:17 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description qkex 2018-10-25 15:15:22 UTC
SUMMARY
System Activity window doesn't remember it resized parameters

STEPS TO REPRODUCE
1. Invoke System Activity with ctrl+esc
2. Resize the window
3. Close it and open up again

OBSERVED RESULT
Window size changed to it's defaults

EXPECTED RESULT
Window should remember the size changes

SOFTWARE VERSIONS
Operating System: KDE neon 5.14
KDE Plasma Version: 5.14.1
Qt Version: 5.11.2
KDE Frameworks Version: 5.51.0
Kernel Version: 4.15.0-38-generic
OS Type: 64-bit
Processors: 8 × Intel® Core™ i7-8550U CPU @ 1.80GHz
Memory: 7.5 GiB of RAM

ADDITIONAL INFORMATION
I think it's happened after plasma 5.14 update, didn't notice the same behavior on 5.13
Comment 1 popov895 2020-03-25 15:16:16 UTC
Same on Plasma 5.18.3 (KDE Neon 5.18, Frameworks 5.68.0, Qt 5.14.1, KWin)
Comment 2 Bug Janitor Service 2022-02-02 16:47:14 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1430
Comment 3 Nate Graham 2022-03-03 21:17:34 UTC
Git commit 892c5a27b427b63b8faa4cd5f92141040fd0fcd1 by Nate Graham, on behalf of Eugene Popov.
Committed on 03/03/2022 at 21:17.
Pushed by ngraham into branch 'master'.

SystemMonitor: Port to KMainWindow

Currently, KSystemActivityDialog is derived from QDialog and therefore has several
limitations:
* it doesn't save and restore its size and position
* it doesn't respect Window Placement settings (it always opens in the center)

Porting it to KMainWindow removes these limitations and saves the user from creating
window rules to get around them.
FIXED-IN: 5.25

M  +28   -33   systemmonitor/ksystemactivitydialog.cpp
M  +6    -9    systemmonitor/ksystemactivitydialog.h
M  +4    -2    systemmonitor/main.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/892c5a27b427b63b8faa4cd5f92141040fd0fcd1