SystemMonitor: Port to KMainWindow

Currently, KSystemActivityDialog is derived from QDialog and therefore has several
limitations:
* it doesn't save and restore its size and position
* it doesn't respect Window Placement settings (it always opens in the center)

Porting it to KMainWindow removes these limitations and saves the user from creating
window rules to get around them.

BUG: 400298
FIXED-IN: 5.25